--- a/DIETROUTINE/app/src/main/AndroidManifest.xml
+++ b/DIETROUTINE/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Result_page"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Assessment_page"
             android:exported="true" />
@@ -27,6 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
